--- a/style/style.css
+++ b/style/style.css
@@ -243,7 +243,7 @@ a {
     justify-content: center;
     flex-direction: column;
     row-gap: 16px;
-    margin-bottom: 40px;
+    padding-bottom: 40px;
 }
 
 /* Start - End */
