--- a/style/style.css
+++ b/style/style.css
@@ -209,7 +209,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 30px;
+    padding: 20px 0;
 }
 
 .start-title {
