--- a/style/style.css
+++ b/style/style.css
@@ -68,19 +68,16 @@ a {
     font-weight: 700;
     font-size: 20px;
     color: var(--black-color);
+    margin-bottom: 10px;
 }
 
 .main-btn {
+    display: block;
     width: 100%;
-    padding: 10px 0;
+    padding: 10px 20px;
     background-color: #00838f;
     border-radius: 16px;
     text-align: center;
-
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
     font-size: 16px;
     color: #fff;
 }
