--- a/style/style.css
+++ b/style/style.css
@@ -187,6 +187,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    z-index: 1000;
 }
 
 .button-panel_menyu-title {
