--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Istok+Web:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 
 * {
     margin: 0;
@@ -185,6 +186,7 @@ a {
     align-items: center;
     justify-content: space-around;
     z-index: 1000;
+    text-align: center;
 }
 
 .button-panel_menyu-title {
@@ -199,18 +201,14 @@ a {
 
 /* Start - Start */
 
-
-.start-row{
-}
-
 .start-top {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 0;
+    padding: 20px 0 40px 0;
 }
 
-.start-top_icon{
+.start-top_icon {
     width: 30px;
     height: 30px;
     display: flex;
@@ -219,7 +217,7 @@ a {
     transition: all 0.2s ease-in;
 }
 
-.start-top_icon:hover{
+.start-top_icon:hover {
     box-shadow: rgba(3, 102, 214, 0.3) 0px 0px 0px 3px;
     border-radius: 10px;
 }
@@ -233,9 +231,9 @@ a {
     color: #000;
 }
 
-.start-card{
+.start-card {
     width: 100%;
-    padding: 8px 12px 8px 15px;
+    padding: 11px 12px 11px 16px;
     border-radius: 16px;
     display: flex;
     align-items: center;
@@ -243,21 +241,48 @@ a {
     background-color: #efefef;
 }
 
-.start-card:hover{
+.start-cr {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 8px;
+}
+
+.start-card_title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 150%;
+}
+
+.catalog-ub {
+    font-weight: 600;
+    font-size: 28px;
+    text-align: center;
+    color: #1f1f1f;
+}
+
+.catalog-up {
+    font-weight: 500;
+    font-size: 16px;
+    text-align: center;
+    color: #a0a0a0;
+}
+
+.start-card:hover {
     box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
 }
 
-.start-card:nth-last-of-type(1){
+.start-card:nth-last-of-type(1) {
     background-color: #ffa625;
     color: white;
 }
 
-.start-card_icon{
+.start-card_icon {
     width: 24px;
     height: 24px;
 }
 
-.start-list{
+.start-list {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -267,3 +292,61 @@ a {
 }
 
 /* Start - End */
+
+/* Catalog - Start */
+
+.catalog-bottom {
+    margin-bottom: 30px;
+}
+
+.catalog-bottom__title {
+    margin-bottom: 10px;
+
+    font-weight: 500;
+    font-size: 16px;
+    color: #000;
+    line-height: 30px;
+}
+
+.catalog-navigation {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 20px;
+    color: #fff;
+}
+
+.catalog-btn {
+    border-radius: 16px;
+    padding: 12px 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #1f1f1f;
+}
+
+.catalog-btn_finish {
+    padding: 16px 28px;
+
+    font-family: "Kanit", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    text-align: center;
+    color: #fff;
+}
+
+.catalog-btn:nth-last-child(1) {
+    background-color: #00838f;
+}
+
+.catalog-display {
+    width: 100%;
+    height: 60px;
+    background-color: #efefef;
+    border-radius: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Catalog - End */
