--- a/style/style.css
+++ b/style/style.css
@@ -323,6 +323,7 @@ a {
     align-items: center;
     justify-content: center;
     background-color: #1f1f1f;
+    margin-bottom: 30px;
 }
 
 .catalog-btn_finish {
