--- a/style/style.css
+++ b/style/style.css
@@ -330,8 +330,9 @@ a {
 }
 
 .catalog-btn_finish {
+    flex-shrink: 0;
     padding: 16px 28px;
-
+    min-width: 115px;
     font-family: "Kanit", sans-serif;
     font-weight: 500;
     font-size: 16px;
